# fastapi-test

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  startup.sh
app/: main.py
app/api/v1/: __init__.py  routes.py
app/core/: config.py
app/db/: __init__.py  session.py
app/dependencies/: __init__.py
app/models/: __init__.py
tests/: test_health.py
