[project]
name = "fastapi-test"
version = "0.1.0"
description = "FastAPI service demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "-q"
